--- a/modulo 5/00-boilerplate/package.json
+++ b/modulo 5/00-boilerplate/package.json
@@ -15,7 +15,7 @@
     "test:watch": "npm run test -- --watchAll -i",
     "clean": "rimraf dist",
     "cypress:open": "cypress open",
-    "cy:run": "cypress run"
+    "cypress:run": "cypress run"
   },
   "repository": {
     "type": "git",
